<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_default_round"
    android:stretchColumns="0,1,2"
    android:gravity="center"
    tools:context="com.macernow.djstava.ljnavigation.sys.StorageFragment">

    <TableRow android:layout_marginLeft="50dp" android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_storage_device_title"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_storage_device_total"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_storage_device_valid"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </TableRow>

    <TableRow android:layout_marginLeft="50dp" android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_storage_device_sd"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/sd_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/sd_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </TableRow>

    <TableRow android:layout_marginLeft="50dp" android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_storage_device_usb"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/usb_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/usb_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </TableRow>

</TableLayout>
