<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_default_round"
    android:stretchColumns="0,1"
    android:gravity="center"
    tools:context="com.macernow.djstava.ljnavigation.sys.AboutFragment">

    <TableRow android:layout_marginLeft="50dp" android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_android_version"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/android_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </TableRow>

    <TableRow android:layout_marginLeft="50dp" android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_kernel_version"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/kernel_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </TableRow>

    <TableRow android:layout_marginLeft="50dp" android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_app_version"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </TableRow>

    <TableRow android:layout_marginLeft="50dp" android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_wlan_mac"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/wlan_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </TableRow>


    <TableRow android:layout_marginLeft="50dp" android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sys_serial_num"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/serial_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </TableRow>

</TableLayout>
